app/scss/questionPage.scss
@import "imports/variables";
@import "imports/modal";

.left{
  float: left
}
.right {
  float: right;
}
.logo {
  height:60px;
  float: right;
  margin-top: 10px;
}
.test-top-row {
  display: flex;
  justify-content: space-between;
}
.question {
  position: relative;
  background-color: $main-background-color;
  width: 100%;
  padding: 30px;
  text-align: left;
  display: none;
}

.question-container {
  height: 100%;
  border: $primary-button solid 2px
}

.question-nav {
  height: 60px;
  margin: 20px 0 20px;
  text-align: center;
}

.question-nav div {
  position: relative;
  width: 25px;
  padding: 8px 0 32px;
  display: inline-block;
  color: #000000;
  text-decoration: none;
  cursor: pointer;
}

.flag {
  position: absolute;
  bottom: 8px;
  top: auto;
  left: 50%;
  transform: translate(-50%);
}

.question-nav p {
  display: inline;
}

.active {
  display: block;
}

img {
  max-width: 100%;
}

.answers input {
  margin: 0 10px;
}

.prev {
  width: 60%;
  background-color: $primary-button;
  border: none;
}

.prev:hover {
  background-color: $primary-button-hover;
}

.next {
  width: 60%;
  background-color: $primary-button;
  border: none;
}

.next:hover {
  background-color: $primary-button-hover;
}

.question-nav-row {
  display: flex;
  justify-content: space-between;
}

.overview {
  visibility: hidden;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.error_message {
  text-align: center;
  font-size: large;
}

#flag-checkbox {
  width: 20px;
  height: 20px
}

#flag-label {
  font-size: 2rem;
}

//======== O V E R V I E W    P A G E ========//
#overview_page {
  display: none;
  margin: 0 auto;
  width: 50%;
}

.overview_page_table {
  width: 100%;
  box-shadow: 0 19px 38px $table-box-shadow, 0 15px 12px $table-box-shadow;

  th, td {
    border: 1px solid $table-border;
    padding: 2px;
  }

  .question_id {
    width: 130px;
  }

  .question_column {
    width: 200px;
  }

  tr:hover {
    cursor: pointer;
    font-weight: bold;
    transition: font-weight 0.5s;

    td {
      background-color: lighten($answered-color, 20%);
      transition: background-color 0.5s;
    }
  }

  .glyphicon {
    top: auto;
    display: table-cell;

    &-flag:before {
      color: $unanswered-color;
    }

    &-remove:before {
      color: $unanswered-color;
    }

    &-ok:before {
      color: $answered-color;
    }
  }
}

.overview_footer p {
  margin: 55px 0 10px;
  text-align: end;
  color: $unanswered-color;
}

.finish {
  width: 100%;
  margin: 50px 0;
}

.unanswered-nav-box {
  background-color: $unanswered-color;
}

.answered-nav-box {
  background-color: $answered-color;
}

.question-nav .current-nav-box {
  border: 1px solid #000000;
  padding: 7px 0 31px;
}

